--- a/B0_field_mapping_tutorial.ipynb
+++ b/B0_field_mapping_tutorial.ipynb
@@ -10,7 +10,7 @@
       "outputs": [],
       "source": [
         "!git clone https://github.com/shimming-toolbox/shimming-toolbox.git\n",
-        "%cd shimming-toolbox/\n",
+        "%cd /content/shimming-toolbox/\n",
         "!pip install shimming-toolbox/\n",
         "! pip install plotly"
       ]
